# game-times

./: .gitignore  README.md  compare_game_results.py  generate_missing_values_file.py  pixi.toml  pyproject.toml
analysis/: scratch.qmd
src/linkedin_game_data/: __init__.py  exif.py  game_name.py  glm_ocr_response.py  utils.py  xmp.py
src/linkedin_game_data/json/: __init__.py  __main__.py  game_names.py  game_result.py  overrides.py  parser.py
src/linkedin_game_data/response_normalization/name/: fuzzy.py  overrides.py
src/linkedin_game_data/scripts/: __init__.py  app.py  exif.py  ocr.py
