[project]
name = "linkedin_game_data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "defusedxml>=0.7.1",
    "fuzzysearch>=0.8.1",
    "ipython>=9.10.0",
    "lets-plot>=4.8.2",
    "ollama>=0.6.1",
    "polars>=1.38.1",
    "pyexiftool>=0.5.6",
    "tqdm>=4.67.3",
    "typer>=0.24.0",
]

[tool.uv]
package = true

[project.scripts]
lig = "linkedin_game_data.scripts.ocr:app"
